<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".SignUpFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

        <TextView
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSub"
                android:textSize="30sp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
        <TextView
                android:text="Full Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtFullName"
                android:textSize="24sp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etxtFullName"
                    android:hint="@string/please_enter_your_full_name"/>
        </android.support.design.widget.TextInputLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
        <TextView
                android:text="Phone Number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPhone"
                android:textSize="24sp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/etxtPhone"
                    android:hint="@string/please_enter_your_phone_number"/>
        </android.support.design.widget.TextInputLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
        <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUsername"
                android:textSize="24sp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etxtUsername"
                    android:hint="@string/please_enter_your_username"/>
        </android.support.design.widget.TextInputLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
        <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPass"
                android:textSize="24sp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPassword"
                app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/etxtPassword"
                    android:hint="@string/please_enter_your_password"/>
        </android.support.design.widget.TextInputLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        <Button
                android:text="Create!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCreate"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|end">
            <Button
                    android:text="@string/log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnReturn"
                    android:background="@null"
                    android:textSize="15sp"/>
            <Space
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>