<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="113dp"
            tools:layout_editor_absoluteX="8dp"
            android:gravity="center">

        <TextView
                android:text="@string/schedroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="86dp"
                tools:layout_editor_absoluteX="176dp"
                android:id="@+id/txtTitle"
                app:fontFamily="cursive"
                android:textSize="56sp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
        <TextView
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSubtitle"
                android:textSize="30sp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUsername"
                android:textSize="24sp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etxtUsername"
                    android:hint="@string/please_enter_your_username"/>
        </android.support.design.widget.TextInputLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="29dp"/>
        <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPassword"
                android:textSize="24sp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
            <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/etxtPassword"
                    android:hint="@string/please_enter_your_password"/>
        </android.support.design.widget.TextInputLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
        <Button
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                android:textSize="24sp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|right">
            <Button
                    android:text="@string/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSignup"
                    android:background="@null"
                    android:textSize="15sp"/>
            <Space
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
                android:text="By Sam, Yvonne, Bonan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtDesigners"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>